--- a/index.html
+++ b/index.html
@@ -12,22 +12,7 @@
   </header>
  
   <main>
-
-	<section>
-    	<h1>Welcome to my site.<br>Please come in and stay awhile.</h1>
-    	<p>I started this web site because Halloween has always been my favorite holiday. 
-    		But during the last year, I started selling some of my favorite Halloween products, 
-    		and they've become quite a hit.</p>
-    	<p>If you click on the Personal link, you can browse my favorite Halloween pictures, 
-    		stories, and films. And if you join my email list, I will keep you up-to-date on 
-    		all things Halloween.</p>
-    	<h2>Product of the week</h2>
-		<p><img src="images/cat1.jpg" alt="Deranged cat" width="150"></p>
-		<p><a href="products/cat.html">20" Deranged cat</a></p>
-		<h3>My guarantee</h3>
-    	<p>If you aren't completely satisfied with everything you buy from my site, you can return it 
-    		for a full refund. <strong>No questions asked!</strong></p>					
-	</section>
+	<p>Hello</p>
   </main>
 
   <footer>
